--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "description": "",
   "main": "",
   "license": "MIT",
-  "homepage": "",
+  "homepage": "https://github.com/mostriki/online-store-angular",
   "ignore": [
     "**/.*",
     "node_modules",
@@ -13,5 +13,8 @@
   ],
   "dependencies": {
     "bootstrap": "v4.0.0-beta"
-  }
+  },
+  "authors": [
+    "Riki Montgomery <mostriki820@gmail.com>"
+  ]
 }
